# plantismash

./: .gitignore  .prospector.yaml  CITATION  CONTRIBUTING.md  CONTRIBUTORS  GCF_000826755.1_ZizJuj_1.1_genomic.gbff.REMOVED.git-id  MANIFEST.in  Makefile  README-Release.md  README.md  README_new.md  conda_dependencies.txt  download_databases.py  environment.yml  getResultfromDB.py  get_batch_overview.py  install_dependencies.py  medicago_coexpression_output_log.txt  modelling_requirements.txt  plantismash_help.txt  pyproject.toml  requirements.txt  run_antismash.py  test_activeSiteFinder.py  test_ecpredictor.py  test_modeling.py
GCF_000826755.1_ZizJuj_1.1_genomic/: NC_029679.1.cluster001.gbk  NC_029679.1.cluster002.gbk  NC_029679.1.cluster003.gbk  NC_029679.1.cluster004.gbk  NC_029679.1.cluster005.gbk  NC_029679.1.cluster006.gbk  NC_029679.1.cluster007.gbk  NC_029679.1.cluster008.gbk  NC_029679.1.cluster009.gbk  NC_029679.1.cluster010.gbk  NC_029679.1.cluster011.gbk  NC_029679.1.cluster012.gbk  NC_029679.1.cluster013.gbk  NC_029679.1.cluster014.gbk  NC_029679.1.cluster015.gbk  NC_029679.1.cluster016.gbk  NC_029679.1.cluster017.gbk  NC_029679.1.cluster018.gbk  NC_029679.1.cluster019.gbk  NC_029679.1.cluster020.gbk  NC_029679.1.cluster021.gbk  NC_029679.1.cluster022.gbk  NC_029679.1.cluster023.gbk  NC_029679.1.cluster024.gbk  NC_029679.1.cluster025.gbk  NC_029679.1.cluster026.gbk  NC_029679.1.cluster027.gbk  NC_029679.1.cluster028.gbk  NC_029679.1.cluster029.gbk  NC_029679.1.cluster030.gbk  NC_029679.1.cluster031.gbk  NC_029679.1.cluster032.gbk  NC_029679.1.cluster033.gbk  NC_029679.1.cluster034.gbk  NC_029679.1.cluster035.gbk  NC_029679.1.cluster036.gbk  NC_029679.1.cluster037.gbk  NC_029679.1.cluster038.gbk  NC_029679.1.cluster039.gbk  NC_029679.1.cluster040.gbk  (+28 more)
antismash/: __init__.py  utils.py
bash_scripts/: create_release_tarball.sh  generateTable.bash  generate_gb-acc_protein_id-mapping.bash  generate_gb-acc_protein_id-mapping.pl  generate_gbacc_protein_id-mapping_for_RefSeq.bash  load_clusterblast_tables.bash  load_pfam_tables.bash  load_subclusterblast_tables.bash  process_clusterblasttab_report.pl  profiling_workflow.txt
db_testing/: delete_gbid_fromhmmertab.sql  hmmertab_allcolumns_bpsA.sql  hmmertab_modul-sql.sql  lookup_hmmertab_substr.sql  retrieve_AMP-Bindingfeature_seq.sql  retrieve_feature_seq.sql
documents_internal/: DRAFT_asDomainFeature.docx  linux-installation.txt  new_dependencies_antiSMASH3.txt
medicago_run_2/: CM001217.2.cluster001.gbk  CM001217.2.cluster002.gbk  CM001217.2.cluster003.gbk  CM001217.2.cluster004.gbk  CM001217.2.cluster005.gbk  CM001217.2.cluster006.gbk  CM001217.2.cluster007.gbk  CM001217.2.cluster008.gbk  CM001217.2.cluster009.gbk  CM001217.2.cluster010.gbk  CM001217.2.cluster011.gbk  CM001217.2.cluster012.gbk  CM001217.2.cluster013.gbk  CM001217.2.cluster014.gbk  CM001217.2.cluster015.gbk  CM001217.2.cluster016.gbk  CM001217.2.cluster017.gbk  CM001217.2.cluster018.gbk  CM001217.2.cluster019.gbk  CM001217.2.cluster020.gbk  CM001217.2.cluster021.gbk  CM001217.2.cluster022.gbk  CM001217.2.cluster023.gbk  CM001217.2.cluster024.gbk  CM001217.2.cluster025.gbk  CM001217.2.cluster026.gbk  (+53 more)
(+1596 files in other folders)
